[project]
name = "bsuite_testing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jamesrj_desktop", email = "james.rudd.jones@gmail.com"},
]
dependencies = [
    "setuptools>=74.0.0",
    "immutabledict>=4.2.0",
    "dm-env>=1.6",
    "scikit-image>=0.21.0",
    "six>=1.16.0",
    "pandas>=2.0.3",
    "termcolor>=2.4.0",
    "dm-haiku==0.0.10",
    "jax==0.4.13",
    "rlax>=0.1.5",
    "tqdm>=4.66.5",
    "distrax>=0.1.5",
    "flashbax>=0.1.2",
    "jaxlib==0.4.13",
    "pillow>=10.4.0",
    "scipy==1.12.0",
    "optax>=0.2.1",
    "wandb>=0.18.3",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

 [[tool.pdm.source]]
 name = "jax_cuda"
 url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
 verify_ssl = true
 type = "find_links"
